# TemplateLibrary

./: .gitignore  CMakeLists.txt  README.md
cmake/: TemplateLibrary.pc.in  TemplateLibraryCPack.cmake  TemplateLibraryConfig.cmake.in  ide.cmake  utils.cmake  version.rc.in
example/: CMakeLists.txt  example.cpp
include/TemplateLibrary/: TemplateLibrary.h  version.h
src/: TemplateLibrary.cpp
tests/: CMakeLists.txt  test.cpp
